<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/nista"
    android:layout_width="match_parent"
    android:layout_height="220sp"
    android:layout_marginEnd="10dp"
    android:orientation="vertical"
    android:padding="10dp">

    <TextView
        android:id="@+id/tvHeading"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:gravity="center_horizontal"
        android:text="@string/tvHeading"
        android:textColor="@color/design_default_color_on_secondary"
        android:textSize="24sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tvHeading2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:gravity="center_horizontal"
        android:text="@string/tvHeading2"
        android:textColor="@color/design_default_color_on_secondary" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_margin="5dp"
        android:contentDescription="@string/imgSadFace"
        app:srcCompat="@drawable/sad_face" />

    <Button
        android:id="@+id/btnClose"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginLeft="100dp"
        android:layout_marginTop="5dp"
        android:layout_marginRight="100dp"
        android:layout_marginBottom="10dp"
        android:background="@android:color/holo_red_light"
        android:gravity="center"
        android:text="@string/btnClose"
        android:textColor="@color/design_default_color_background"
        android:textSize="14sp"
        android:textStyle="bold" />

</LinearLayout>