<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="15dp"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:elevation="10dp"
        app:cardBackgroundColor="@color/colorLight">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imgPoster"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:layout_margin="10dp"
                android:contentDescription="@string/hello_blank_fragment"
                android:padding="5dp"
                app:srcCompat="@drawable/ic_launcher_foreground" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:orientation="horizontal"
                android:padding="3dp">

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/movie_title"
                    android:textColor="@color/design_default_color_on_secondary"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tvMovieName"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="2"
                    android:text="@string/tvMovieTitle"
                    android:textColor="@color/design_default_color_on_secondary" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:orientation="horizontal"
                android:padding="3dp">

                <TextView
                    android:id="@+id/textView6"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/release_date"
                    android:textColor="@color/design_default_color_on_secondary"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tvRealeaseDate"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:text="@string/tvreleasedate"
                    android:textColor="@color/design_default_color_on_secondary"
                    android:textFontWeight="2"
                    tools:targetApi="p" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:orientation="horizontal"
                android:padding="3dp">

                <TextView
                    android:id="@+id/textView7"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/full_movie_overview"
                    android:textColor="@color/design_default_color_on_secondary"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tvFullMovieOverview"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:text="@string/tvOverview"
                    android:textColor="@color/design_default_color_on_secondary" />
            </LinearLayout>

        </LinearLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>